--- a/mini_project2/style.css
+++ b/mini_project2/style.css
@@ -98,4 +98,13 @@ img:hover{
     transform: scale(1.05);
     transition: all 0.3s ease-in-out;
 }
-
+.about{
+    font-size:larger ;
+}
+.about .h2{
+    color: chartreuse;
+}
+.images .table {
+    width: 30;
+    width: auto;
+}
